crates/devc-tui/tests/snapshots/snapshot_tests__build_output_view.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - Dev Container Manager ────────────────────────────────────────────────┐
│ 1:Containers  │  2:Providers  │  3:Settings                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Build Output [1/4] - Building... ────────────────────────────────────────────┐
│   1 Building container: test-container                                       │
│   2 Step 1/5: FROM rust:latest                                               │
│   3 Step 2/5: WORKDIR /app                                                   │
│   4 Step 3/5: COPY . .                                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│j/k: Scroll  g/G: Top/Bottom  (building...)                                   │
└──────────────────────────────────────────────────────────────────────────────┘
