crates/devc-tui/tests/snapshots/snapshot_tests__compose_container_detail_loading.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - ┌ compose-app ─────────────────────────────────────────────────────────┐────────┐
│ 1:Conta│Name:        compose-app                                              │        │
└────────│Status:      running                                                  │────────┘
┌ Contain│Provider:    docker                                                   │────────┐
│      Na│Source:      Devc                                                     │        │
│        │ID:          test-compose-app                                         │        │
│▶ ●   co│                                                                      │        │
│        │Workspace:   /tmp/test                                                │        │
│        │Config:      /tmp/test/.devcontainer/devcontainer.json                │        │
│        │                                                                      │        │
│        │Image ID:    sha256:abc123                                            │        │
│        │Container:   container-compose-app                                    │        │
│        │                                                                      │        │
│        │┌ Compose Services ──────────────────────────────────────────────────┐│        │
│        ││Loading services...                                                 ││        │
│        ││                                                                    ││        │
│        ││                                                                    ││        │
│        ││                                                                    ││        │
│        ││                                                                    ││        │
│        ││                                                                    ││        │
│        ││                                                                    ││        │
│        ││                                                                    ││        │
│        │└────────────────────────────────────────────────────────────────────┘│        │
│        └──────────────────────────────────────────────────────────────────────┘        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌────────────────────────────────────────────────────────────────────────────────────────┐
│j/k: Scroll  s: Stop  R: Rebuild  l: Logs  S: Shell  d: Delete  1-3: Switch tab  Esc/q: │
└────────────────────────────────────────────────────────────────────────────────────────┘
