crates/devc-tui/tests/snapshots/snapshot_tests__compose_container_detail_with_services.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - ┌ compose-app ─────────────────────────────────────────────────────────┐────────┐
│ 1:Conta│Name:        compose-app                                              │        │
└────────│Status:      running                                                  │────────┘
┌ Contain│Provider:    docker                                                   │────────┐
│      Na│ID:          test-compose-app                                         │        │
│        │                                                                      │        │
│▶ ●   co│Workspace:   /tmp/test                                                │        │
│        │Config:      /tmp/test/.devcontainer/devcontainer.json                │        │
│        │                                                                      │        │
│        │Image ID:    sha256:abc123                                            │        │
│        │Container:   container-compose-app                                    │        │
│        │                                                                      │        │
│        │Created:     2024-01-15 12:00:00                                      │        │
│        │┌ Compose Services ──────────────────────────────────────────────────┐│        │
│        ││      Service            Status                                     ││        │
│        ││▶ ●   app (dev)          running                                    ││        │
│        ││  ●   db                 running                                    ││        │
│        ││  ○   redis              exited                                     ││        │
│        ││                                                                    ││        │
│        ││                                                                    ││        │
│        ││                                                                    ││        │
│        ││                                                                    ││        │
│        │└────────────────────────────────────────────────────────────────────┘│        │
│        └──────────────────────────────────────────────────────────────────────┘        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌────────────────────────────────────────────────────────────────────────────────────────┐
│j/k: Select service  s: Stop  R: Rebuild  l: Logs  S: Shell  d: Delete  1-3: Switch tab │
└────────────────────────────────────────────────────────────────────────────────────────┘
