crates/devc-tui/tests/snapshots/snapshot_tests__compose_container_list_badge.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - Dev Container Manager ────────────────────────────────────────────────┐
│ 1:Containers  │  2:Providers  │  3:Settings                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Containers ──────────────────────────────────────────────────────────────────┐
│      Name                         Status       Provider Workspace            │
│                                                                              │
│▶ ●   compose-app [compose:3]      running      docker   /tmp/test            │
│  ●   standalone                   running      docker   /tmp/test            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│D: Discover  j/k: Navigate  Enter: Details  s: Start/Stop  u: Up  R: Rebuild  │
└──────────────────────────────────────────────────────────────────────────────┘
