crates/devc-tui/tests/snapshots/snapshot_tests__container_detail_view.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - D┌ my-rust-project ─────────────────────────────────────────┐─────────┐
│ 1:Contai│Name:        my-rust-project                              │         │
└─────────│Status:      running                                      │─────────┘
┌ Containe│Provider:    docker                                       │─────────┐
│      Nam│ID:          test-my-rust-project                         │         │
│         │                                                          │         │
│▶ ●   my-│Workspace:   /tmp/test                                    │         │
│         │Config:      /tmp/test/.devcontainer/devcontainer.json    │         │
│         │                                                          │         │
│         │Image ID:    sha256:abc123                                │         │
│         │Container:   container-my-rust-project                    │         │
│         │                                                          │         │
│         │Created:     2024-01-15 12:00:00                          │         │
│         │Last used:   2024-01-15 12:00:00                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         └──────────────────────────────────────────────────────────┘         │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│s: Stop  R: Rebuild  l: Logs  S: Shell  d: Delete  1-3: Switch tab  Esc/q: Bac│
└──────────────────────────────────────────────────────────────────────────────┘
