crates/devc-tui/tests/snapshots/snapshot_tests__container_operation_spinner.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - Dev Container Manager ────────────────────────────────────────────────┐
│ 1:Containers  │  2:Providers  │  3:Settings                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Containers ──────────────────────────────────────────────────────────────────┐
│      Name                   Status       Provider   Workspace                │
│                                                                              │
│▶ ●   my-rust-project        running      docker     /tmp/test                │
│  ○   python-api             stopped      docker     /tmp/test                │
│                                                                              │
│                   ┌ Stopping ────────────────────────────┐                   │
│                   │                                      │                   │
│                   │     ⠹ Stopping my-rust-project...    │                   │
│                   │                                      │                   │
│                   │            Esc to dismiss            │                   │
│                   └──────────────────────────────────────┘                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│D: Discover  j/k: Navigate  Enter: Details  s: Start/Stop  u: Up  R: Rebuild  │
└──────────────────────────────────────────────────────────────────────────────┘
