crates/devc-tui/tests/snapshots/snapshot_tests__containers_view_empty.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - Dev Container Manager ────────────────────────────────────────────────┐
│ 1:Containers  │  2:Providers  │  3:Settings                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Containers ──────────────────────────────────────────────────────────────────┐
│No containers found.                                                          │
│                                                                              │
│Use 'devc init' in a directory with devcontainer.json to add a container.     │
│                                                                              │
│Press 'D' to discover existing devcontainers.                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│D: Discover  ?: Help  q: Quit                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
